--- a/html/ourteam.html
+++ b/html/ourteam.html
@@ -3,44 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxury Hotel</title>
+    <title>Our Team</title>
     <link rel="stylesheet" href="/css/ourteam.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-	<link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
 </head>
+
 <body>
-    <header>
-        <a href="#"><img src="images/logo.png" class="logo" width="150" height="120"></a>
+<!-- Header Start -->
+<header>
+    <a href="#"><img src="/images/logo.png" class="logo" width="150" height="120"></a>
 
-        <div>
-          <ul id="navbar">
-              <li><a class="active" href="#home">Home</a></li>
-              <li><a href="#rooms">Rooms</a></li>
-              <li><a href="#facilities">Facilities</a></li>
-              <li><a href="#faq">Faq</a></li>
-              <li><a href="#team">Our Teams</a></li>
-              <li><a id="login" href="./login/login.html"><i class="fas fa-user"></i></a></li>
-              <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
-          </ul>
-        </div>
-        <div id="mobile">
-          <a href="./login/login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a>
-          <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
-        </div>
-    </header>
+    <div>
+      <ul id="navbar">
+          <li><a class="active" href="/index.html">Home</a></li>
+          <li><a href="rooms.html">Rooms</a></li>
+          <li><a href="facilities.html">Facilities</a></li>
+          <li><a href="faq.html">Faq</a></li>
+          <li><a href="ourteam.html">Our Teams</a></li>
+          <li><a id="login" href="login.html"><i class="fas fa-user"></i></a></li>
+          <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
+      </ul>
+    </div>
+    <div id="mobile">
+      <a href="login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a>
+      <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
+    </div>
+</header>
+<!-- End Header -->
 
+<!-- Start Team -->
     <section class="team">
 		<div class="center">
 			<h1>Our Team</h1>
 		</div>
-
+        <!-- 1 ROW -->
 		<div class="team-content">
 			<div class="box">
 				<img src="/images/arya.jpg" >
-				<h3>M. Rizki Arya Rifai </h3>
+				<h3>M. Rizki Arya Rifai</h3>
 				<h5>Project Leader & Front End Engineer</h5>
 				<div class="icons">
 					<a href="#"><i class="fab fa-linkedin-in"></i></i></a>
@@ -67,10 +71,9 @@
 					<a href="#"><i class="fab fa-instagram"></i></i></a>
 				</div>
 			</div>
-
-		
-
 		</div>
+
+        <!-- 2 ROW -->
         <div class="team-content">
             <div class="box">
 				<img src="/images/01.png">
@@ -103,55 +106,59 @@
 			</div>
         </div>
 	</section>
-	<footer>
-        <div class="footer">
-            <div class="row">
-                <div class="footer-col">
-                    <h4>Luxury Hotel</h4>
-                    <ul>
-                        <li><a href="#rooms">Rooms</a></li>
-                        <li><a href="#facilities">Facilities</a></li>
-                        <li><a href="#faq">Faq</a></li>
-                        <li><a href="#team">Our Team</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Tipe-tipe Rooms</h4>
-                    <ul>
-                        <li><a href="#service">Deluxe Basic</a></li>
-                        <li><a href="#service">Deluxe Common</a></li>
-                        <li><a href="#service">Deluxe Rare</a></li>
-                        <li><a href="#service">Executive Spesial</a></li>
-                        <li><a href="#service">Executive Epic</a></li>
-                        <li><a href="#service">Executive Legendary</a></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Contact</h4>
-                    <ul>
-                        <li><a>LuxuryHotel@gmail.co.id</a> <i class="uil uil-envelope-alt email"></i> </li>
-                        <li><a>(021) 73432553</a><i class="uil uil-phone-alt"></i></li>
-                        <li><a>(021) 70459586</a><i class="uil uil-phone-alt"></i></li>
-                    </ul>
-                </div>
-                <div class="footer-col">
-                    <h4>Partners</h4>
-                    <div class="social-links">
-                        <a href="#footer"><img src="./images/unsika.png" alt="partners" width="30" height="30"></a>
-                        <a href="#footer"><img src="./images/unj.png" alt="partners" width="30" height="30"></a>
-                        <a href="#footer"><img src="./images/unpad.png" alt="partners" width="40" height="35"></a>
-                        <a href="#footer"><img src="./images/unej.png" alt="partners" width="30" height="30"></a>
-                        <a href="#footer"><img src="./images/unnes.png" alt="partners" width="30" height="40"></a>
-                        <a href="#footer"><img src="./images/KM.png" alt="partners" width="30" height="30"></a>
-                        <a href="#footer"><img src="./images/msib1.png" alt="partners" width="30" height="30"></a>
-                        <a href="#footer"><img src="./images/revou.png" alt="partners" width="30" height="30"></a>
-                    </div>
+<!-- End Team -->
+
+
+<!-- Footer Start -->
+<footer>
+    <div class="footer">
+        <div class="row">
+            <div class="footer-col">
+                <h4>Luxury Hotel</h4>
+                <ul>
+                    <li><a href="#rooms">Rooms</a></li>
+                    <li><a href="#facilities">Facilities</a></li>
+                    <li><a href="#faq">Faq</a></li>
+                    <li><a href="#team">Our Team</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Tipe-tipe Rooms</h4>
+                <ul>
+                    <li><a href="#service">Deluxe Basic</a></li>
+                    <li><a href="#service">Deluxe Common</a></li>
+                    <li><a href="#service">Deluxe Rare</a></li>
+                    <li><a href="#service">Executive Spesial</a></li>
+                    <li><a href="#service">Executive Epic</a></li>
+                    <li><a href="#service">Executive Legendary</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Contact</h4>
+                <ul>
+                    <li><a>LuxuryHotel@gmail.co.id</a> <i class="uil uil-envelope-alt email"></i> </li>
+                    <li><a>(021) 73432553</a><i class="uil uil-phone-alt"></i></li>
+                    <li><a>(021) 70459586</a><i class="uil uil-phone-alt"></i></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Partners</h4>
+                <div class="social-links">
+                    <a href="#footer"><img src="/images/unsika.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="/images/unj.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="/images/unpad.png" alt="partners" width="40" height="35"></a>
+                    <a href="#footer"><img src="/images/unej.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="/images/unnes.png" alt="partners" width="30" height="40"></a>
+                    <a href="#footer"><img src="/images/KM.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="/images/msib1.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="/images/revou.png" alt="partners" width="30" height="30"></a>
                 </div>
             </div>
         </div>
-        <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel</p>
-    </footer>
-<script src="./js/script.js"></script>
-<script src="/js/java.js"></script>
+    </div>
+    <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel</p>
+</footer>
+<!-- Footer End -->
+<script src="/js/ourteam.js"></script>
 </body>
 </html>
