--- a/html/faq.html
+++ b/html/faq.html
@@ -3,45 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Faq</title>
-    <link rel="stylesheet" href="./css/faq.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Rooms</title>
+    <link rel="stylesheet" href="/css/faq.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet"
-    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
 </head>
-<body>
-    <header>
-        <img class="logo" src="./images/logo.png"  width="150" height="120" >
-        <nav>
-            <ul class="nav_links">
-                <li><a href="#">Rooms</a></li>
-                <li><a href="#">Facilities</a></li>
-                <li><a href="#">Faq</a></li>
-                <li><a href="#">Our Team</a></li>
-            </ul>
-        </nav>
-        <a class="cta" href="#"><button>Book Now</button></a>
-    </header>
 
+<body>
+<!-- Header Start -->
+<header>
+    <a href="#"><img src="/images/logo.png" class="logo" width="150" height="120"></a>
+
+    <div>
+      <ul id="navbar">
+          <li><a class="active" href="/index.html">Home</a></li>
+          <li><a href="rooms.html">Rooms</a></li>
+          <li><a href="facilities.html">Facilities</a></li>
+          <li><a href="faq.html">Faq</a></li>
+          <li><a href="ourteam.html">Our Teams</a></li>
+          <li><a id="login" href="login.html"><i class="fas fa-user"></i></a></li>
+          <a href="#" id="close"><i class="fas fa-times" style="color: #B9A13F;"></i></a>
+      </ul>
+    </div>
+    <div id="mobile">
+      <a href="login.html"><i class="fas fa-user" style="color: #B9A13F;"></i></a>
+      <i id="bar" class="fas fa-outdent" style="color: #B9A13F;"></i>
+    </div>
+</header>
+<!-- End Header -->
+
+<!-- Start FAQ -->
     <section class="faq">
         <ul id="accordion">
             <li>
-                <label for="colomn1">What are u doing? <span>&#x3e;</span></label>
+                <label for="colomn1">Do you have wifi? <span>&#x3e;</span></label>
                 <input type="radio" name="accordion" id="colomn1" checked>
                 <div class="content">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ea architecto beatae? Odio similique, laboriosam eveniet nam deserunt, nobis explicabo sed aliquid dicta, cupiditate id debitis beatae soluta modi numquam
+                        Stay connected during your stay with 40MB bandwidth internet service provided throughout our guestrooms and public areas. Please log-in with your username and password provided at check-in. User name is your room no. Password is *followed by room no. eg: USER NAME: 2803 PASSWORD: *2803.
                     </p>
                 </div>
             </li>
             <li>
-                <label for="colomn2">How are u doing? <span>&#x3e;</span></label>
+                <label for="colomn2">Can I smoke in the establishment? <span>&#x3e;</span></label>
                 <input type="radio" name="accordion" id="colomn2" >
                 <div class="content">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ea architecto beatae? Odio similique, laboriosam eveniet nam deserunt, nobis explicabo sed aliquid dicta, cupiditate id debitis beatae soluta modi numquam
+                        The hotel is strictly non-smoking, both inside and in the outdoor common areas.
                     </p>
                 </div>
             </li>
@@ -75,64 +86,56 @@
         </ul>
     </section>
 
-    <footer>
-        <div class="footer1">
-            <div class="row">
-                    <div class="footer-content">
-                    <h4>Luxury Hotel</h4>
-                    <p>Jl. Prof. Dr. Satrio Kav.19-24 Karet Kuningan,<br> Jakarta Selatan 12940</p>
-                    
-                    <div class="icons">
-                        <h4>Stay Connected</h4>
-                        <a href="#"><i class='bx bxl-facebook-square' ></i></i></box-icon></a>
-                        <a href="#"><i class='bx bxl-instagram-alt' ></i></i></box-icon></a>
-                        <a href="#"><i class='bx bxl-linkedin-square'></i></i></box-icon></a>
-                        <a href="#"><i class='bx bxl-twitter' ></i></box-icon></a>
-                        <a href="#"><i class='bx bxl-youtube' ></i></box-icon></a>
-                    </div>
+<!-- Footer Start -->
+<footer>
+    <div class="footer">
+        <div class="row">
+            <div class="footer-col">
+                <h4>Luxury Hotel</h4>
+                <ul>
+                    <li><a href="#rooms">Rooms</a></li>
+                    <li><a href="#facilities">Facilities</a></li>
+                    <li><a href="#faq">Faq</a></li>
+                    <li><a href="#team">Our Team</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Tipe-tipe Rooms</h4>
+                <ul>
+                    <li><a href="#service">Deluxe Basic</a></li>
+                    <li><a href="#service">Deluxe Common</a></li>
+                    <li><a href="#service">Deluxe Rare</a></li>
+                    <li><a href="#service">Executive Spesial</a></li>
+                    <li><a href="#service">Executive Epic</a></li>
+                    <li><a href="#service">Executive Legendary</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Contact</h4>
+                <ul>
+                    <li><a>LuxuryHotel@gmail.co.id</a> <i class="uil uil-envelope-alt email"></i> </li>
+                    <li><a>(021) 73432553</a><i class="uil uil-phone-alt"></i></li>
+                    <li><a>(021) 70459586</a><i class="uil uil-phone-alt"></i></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Partners</h4>
+                <div class="social-links">
+                    <a href="#footer"><img src="/images/unsika.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="/images/unj.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="/images/unpad.png" alt="partners" width="40" height="35"></a>
+                    <a href="#footer"><img src="/images/unej.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="/images/unnes.png" alt="partners" width="30" height="40"></a>
+                    <a href="#footer"><img src="/images/KM.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="/images/msib1.png" alt="partners" width="30" height="30"></a>
+                    <a href="#footer"><img src="/images/revou.png" alt="partners" width="30" height="30"></a>
                 </div>
-
-                <div class="footer-content">
-                    <h4>Rooms</h4>
-                    <li><a href="#">Deluxe Basic</a></li>
-                    <li><a href="#">Deluxe Common</a></li>
-                    <li><a href="#">Deluxe Rare</a></li>
-                    <li><a href="#">Executive Spesial</a></li>
-                    <li><a href="#">Executive Epic</a></li>
-                    <li><a href="#">Executive Legendary</a></li>
-                </div>
-
-                <div class="footer-content">
-                    <h4>Contact</h4>
-                    <li><a href="#">LuxuryHotel@gmail.com</a></li>
-                    <li><a href="#">(021)70459586</a></li>
-                    <li><a href="#">(021)73432553</a></li>
-                    <li><a href="#">(021)73432553</a></li>
-                </div>
-
-                <div class="footer-content">
-                    <h4>Quick Links</h4>
-                    <li><a href="#">Rooms</a></li>
-                    <li><a href="#">Facilities</a></li>
-                    <li><a href="#">Faq</a></li>
-                    <li><a href="#">Our Teams</a></li>
-                </div>
-
-                <div class="footer-content">
-                    <h4>Partners</h4>
-                    <div class="logo-partners">
-                        <img src="./images/unsika.png" alt="unsika" width="48" height="48">
-                        <img src="./images/unj.png" alt="unsika" width="48" height="48">
-                        <img src="./images/unpad.png" alt="unsika" width="48" height="48">
-                        <img src="./images/unej.png" alt="unsika" width="48" height="48">
-                        <img src="./images/KM.png" alt="unsika" width="48" height="48">
-                        <img src="./images/msib1.png" alt="unsika" width="48" height="48">
-                        <img src="./images/revou.png" alt="unsika" width="48" height="48">
-                    </div>
-                </div>
-            </div> 
+            </div>
         </div>
-        <p style="color: #B9A13F; text-align: center; display: block; line-height: 1.9rem; margin: 4rem 0 3rem 0;">&#169; 2023 - Made by PT. Luxury Hotel  Group 10 Team E</p>
-    </footer>
+    </div>
+    <p style="color:#B9A13F; text-align: center; display: block; line-height: 1.9rem; margin-top: 4rem; margin-bottom: 0;">&#169; 2023 - Made by Luxury Hotel</p>
+</footer>
+<!-- Footer End -->
+<script src="/js/faq.js"></script>
 </body>
 </html>
