--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luxury Hotel</title>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="icon" href="/images/logo.png" type="luxury-hotel-logo">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
     
@@ -54,7 +52,7 @@
             <p><br>Beberapa rekomendasi untuk kalian</p>
             <a href="#recomen" class="buttons">View More</a>
         </div>
-        <img src="/images/hotel2.jpg" style="width: 100%; height: 100%;">
+        <img src="/images/Executive Legendary.jpg" style="width: 100%; height: 100%;">
     </div>
     
     <div class="wrapper-main">
@@ -147,6 +145,79 @@
 </section>
 <!-- End Recomendation -->
 
+
+<!-- Start Review -->
+<section class="review-main">
+    <div class="head-recomen">
+        <!-- <span>Explore</span> -->
+        <h2>Recomendation Rooms</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, <br>
+            adipisicing elit. Dolor quos illo</p>
+    </div>
+    <div class="wrapper">
+        <div class="box">
+          <i class="fas fa-quote-left quote"></i>
+          <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
+          <div class="content">
+            <div class="info">
+              <div class="name">Alex Smith</div>
+              <div class="job">Designer | Developer</div>
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+            </div>
+            <div class="image">
+              <img src="/images/tanboykun.webp" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fas fa-quote-left quote"></i>
+          <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
+          <div class="content">
+            <div class="info">
+              <div class="name">Steven Chris</div>
+              <div class="job">YouTuber | Blogger</div>
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+              </div>
+            </div>
+            <div class="image">
+              <img src="/images/windah.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="box">
+          <i class="fas fa-quote-left  quote"></i>
+          <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
+          <div class="content">
+            <div class="info">
+              <div class="name">Kristina Bellis</div>
+              <div class="job">Freelancer | Advertiser</div>
+              <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="far fa-star"></i>
+              </div>
+            </div>
+            <div class="image">
+              <img src="/images/miawaug.jpg" alt="">
+            </div>
+          </div>
+      </div>
+</section>
+
+<!-- End Review -->
 
 <!-- End Home -->
 
