--- a/html/form.html
+++ b/html/form.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
     <link rel="stylesheet" href="/css/form.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+	<link rel="icon" href="/images/logo.png" type="luxury-hotel-logo">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
 </head>
@@ -84,7 +82,7 @@
 
                     <div class="buttons">
                         <div class="bookBtn">
-                            <span class="btnText">Book</span>
+                            <span class="btnText">Booking</span>
                             <box-icon name='reset'></box-icon>
                         </div>
 
