--- a/html/rooms.html
+++ b/html/rooms.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rooms</title>
     <link rel="stylesheet" href="/css/rooms.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="icon" href="/images/logo.png" type="luxury-hotel-logo">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
 </head>
@@ -280,7 +278,7 @@
                     <a href="#footer"><img src="/images/unpad.png" alt="partners" width="40" height="35"></a>
                     <a href="#footer"><img src="/images/unej.png" alt="partners" width="30" height="30"></a>
                     <a href="#footer"><img src="/images/unnes.png" alt="partners" width="30" height="40"></a>
-                    <a href="#footer"><img src="/images/KM.png" alt="partners" width="30" height="30"></a>
+                    <a href="https://kampusmerdeka.kemdikbud.go.id/"><img src="/images/KM.png" alt="partners" width="30" height="30"></a>
                     <a href="#footer"><img src="/images/msib1.png" alt="partners" width="30" height="30"></a>
                     <a href="#footer"><img src="/images/revou.png" alt="partners" width="30" height="30"></a>
                 </div>
