--- a/html/facilities.html
+++ b/html/facilities.html
@@ -42,8 +42,8 @@
       </div>
       <div class="card__container">
          <div class="card__article">
-            <h2>Facilities</h2>
-            <img src="/images/wedding2.jpg" alt="image" class="card__img">
+            <h2>Parking Area</h2>
+            <img src="/images/parkingArea.jpg" alt="image" class="card__img">
 
             <div class="card__data">
                <span class="card__description">Luxury Hotel</span>
@@ -52,8 +52,8 @@
          </div>
 
          <div class="card__article">
-            <h2>Facilities</h2>
-            <img src="/images/gym2.jpg" alt="image" class="card__img">
+            <h2>Gym</h2>
+            <img src="/images/gym.jpg" alt="image" class="card__img">
 
             <div class="card__data">
                <span class="card__description">Luxury Hotel</span>
@@ -62,8 +62,8 @@
          </div>
 
          <div class="card__article">
-            <h2>Facilities</h2>
-            <img src="/images/meeting2.jpg" alt="image" class="card__img">
+            <h2>Meeting Room</h2>
+            <img src="/images/meeting.jpg" alt="image" class="card__img">
 
             <div class="card__data">
                <span class="card__description">Luxury Hotel</span>
@@ -72,8 +72,8 @@
          </div>
 
          <div class="card__article">
-            <h2>Facilities</h2>
-            <img src="/images/diningR2.jpg" alt="image" class="card__img">
+            <h2>Dining Room</h2>
+            <img src="/images/diningR.jpg" alt="image" class="card__img">
 
             <div class="card__data">
                <span class="card__description">Luxury Hotel</span>
@@ -82,8 +82,8 @@
          </div>
 
          <div class="card__article">
-            <h2>Facilities</h2>
-            <img src="/images/Pool2.jpg" alt="image" class="card__img">
+            <h2>Swimming Pool</h2>
+            <img src="/images/pool.jpg" alt="image" class="card__img">
 
             <div class="card__data">
                <span class="card__description">Luxury Hotel</span>
@@ -92,8 +92,8 @@
          </div>
 
        <div class="card__article">
-         <h2>Facilities</h2>
-            <img src="/images/spa1.jpg" alt="image" class="card__img">
+         <h2>Spa</h2>
+            <img src="/images/spa.jpg" alt="image" class="card__img">
 
             <div class="card__data">
                <span class="card__description">Luxury Hotel</span>
