--- a/html/faq.html
+++ b/html/faq.html
@@ -34,55 +34,48 @@
 <!-- End Header -->
 
 <!-- Start FAQ -->
-    <section class="faq">
-        <ul id="accordion">
-            <li>
-                <label for="colomn1">Do you have wifi? <span>&#x3e;</span></label>
-                <input type="radio" name="accordion" id="colomn1" checked>
-                <div class="content">
-                    <p>
-                        Stay connected during your stay with 40MB bandwidth internet service provided throughout our guestrooms and public areas. Please log-in with your username and password provided at check-in. User name is your room no. Password is *followed by room no. eg: USER NAME: 2803 PASSWORD: *2803.
-                    </p>
-                </div>
-            </li>
-            <li>
-                <label for="colomn2">Can I smoke in the establishment? <span>&#x3e;</span></label>
-                <input type="radio" name="accordion" id="colomn2" >
-                <div class="content">
-                    <p>
-                        The hotel is strictly non-smoking, both inside and in the outdoor common areas.
-                    </p>
-                </div>
-            </li>
-            <li>
-                <label for="colomn3">Where are u doing? <span>&#x3e;</span></label>
-                <input type="radio" name="accordion" id="colomn3" >
-                <div class="content">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ea architecto beatae? Odio similique, laboriosam eveniet nam deserunt, nobis explicabo sed aliquid dicta, cupiditate id debitis beatae soluta modi numquam
-                    </p>
-                </div>
-            </li>
-            <li>
-                <label for="colomn4">When are u doing? <span>&#x3e;</span></label>
-                <input type="radio" name="accordion" id="colomn4" >
-                <div class="content">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ea architecto beatae? Odio similique, laboriosam eveniet nam deserunt, nobis explicabo sed aliquid dicta, cupiditate id debitis beatae soluta modi numquam
-                    </p>
-                </div>
-            </li>
-            <li>
-                <label for="colomn5">Why are u doing? <span>&#x3e;</span></label>
-                <input type="radio" name="accordion" id="colomn5" >
-                <div class="content">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad ea architecto beatae? Odio similique, laboriosam eveniet nam deserunt, nobis explicabo sed aliquid dicta, cupiditate id debitis beatae soluta modi numquam
-                    </p>
-                </div>
-            </li>
-        </ul>
-    </section>
+<div class="accordion">
+    <div class="image-box">
+      <img src="/images/Faq.png" alt="">
+    </div>
+    <div class="accordion-text">
+      <div class="title">FAQ</div>
+    <ul class="faq-text">
+      <li>
+        <div class="question-arrow">
+          <span class="question">Apa fasilitas yang dapat diakses oleh tamu dan sudah termasuk dalam biaya kamar?</span>
+          <i class="bx bxs-chevron-down arrow"></i>
+        </div>
+        <p> Kami menyediakan Wi-Fi gratis, kolam renang, restoran di dalam hotel, dan gym. tetapi, untuk sarapan tidak termasuk dalam harga kamar.</p>
+        <span class="line"></span>
+      </li>
+      <li>
+        <div class="question-arrow">
+          <span class="question">Pukul berapa waktu Check-In & Check-Out?</span>
+          <i class="bx bxs-chevron-down arrow"></i>
+        </div>
+        <p>Waktu check-in kami dimulai pada pukul 14.00 WIB, sementara waktu check-out adalah pukul 12.00 WIB. Kami juga menawarkan opsi check-in lebih awal dengan biaya tambahan, dan opsi check-out melewati waktu standar, tergantung pada ketersediaan kamar.</p>
+        <span class="line"></span>
+      </li>
+      <li>
+        <div class="question-arrow">
+          <span class="question">Apakah hotel menyediakan fasilitas parkir dan valet parking serta apakah ada biaya tambahan?</span>
+          <i class="bx bxs-chevron-down arrow"></i>
+        </div>
+        <p>Tentu, Fasilitas parkir ini dapat digunakan tanpa biaya tambahan. Jika Anda lebih memilih valet parking, layanan tersebut juga tersedia dengan biaya tambahan yang dapat Anda peroleh di resepsionis</p>
+        <span class="line"></span>
+      </li>
+      <li>
+        <div class="question-arrow">
+          <span class="question">Bagaimana kebijakan pembatalan reservasi di hotel ini?</span>
+          <i class="bx bxs-chevron-down arrow"></i>
+        </div>
+        <p>Kami memberikan kelonggaran pembatalan tanpa biaya jika dilakukan 1 hari sebelum tanggal check-in. Lewat dari itu, akan dikenakan biaya pembatalan sebesar Rp250.000. <!--Proses pembatalan dan perubahan dapat dilakukan secara online melalui situs resmi kami.--></p>
+        <span class="line"></span>
+      </li>
+    </ul>
+    </div>
+  </div>
 
 <!-- Footer Start -->
 <footer>
