--- a/html/ourteam.html
+++ b/html/ourteam.html
@@ -45,13 +45,13 @@
 				<h3>M. Rizki Arya Rifai</h3>
 				<h5>Project Leader & Front End Engineer</h5>
 				<div class="icons">
-					<a href="#"><i class="fab fa-linkedin-in"></i></i></a>
-					<a href="#"><i class="fab fa-instagram"></i></i></a>
+					<a href="https://www.linkedin.com/in/mrizkiaryarifai?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></i></a>
+					<a href="https://instagram.com/rizki.arya6?igshid=OGQ5ZDc2ODk2ZA"><i class="fab fa-instagram"></i></i></a>
 				</div>
 			</div>
 
 			<div class="box">
-				<img src="/images/liza1.jpg">
+				<img src="/images/liza.jpg">
 				<h3>Allyza Yusykarina Safitri</h3>
 				<h5>Front End Engineer</h5>
 				<div class="icons">
@@ -65,8 +65,8 @@
 				<h3>Chaterine Ariane Angelina</h3>
 				<h5>Quality Assurance</h5>
 				<div class="icons">
-					<a href="#"><i class="fab fa-linkedin-in"></i></i></a>
-					<a href="#"><i class="fab fa-instagram"></i></i></a>
+					<a href="http://www.linkedin.com/in/chaterinearianeangelina"><i class="fab fa-linkedin-in"></i></i></a>
+					<a href="https://instagram.com/ch.angelina19?igshid=OGQ5ZDc2ODk2ZA"><i class="fab fa-instagram"></i></i></a>
 				</div>
 			</div>
 		</div>
@@ -74,22 +74,22 @@
         <!-- 2 ROW -->
         <div class="team-content">
             <div class="box">
-				<img src="/images/01.png">
+				<img src="/images/sintia.jpg">
 				<h3>Anis Sintia</h3>
 				<h5>Quality Assurance</h5>
 				<div class="icons">
-					<a href="#"><i class="fab fa-linkedin-in"></i></i></a>
-					<a href="#"><i class="fab fa-instagram"></i></i></a>
+					<a href="https://www.linkedin.com/in/anis-sintia-724a00276?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></i></a>
+					<a href="https://instagram.com/anissintyaa?igshid=NzZlODBkYWE4Ng"><i class="fab fa-instagram"></i></i></a>
 				</div>
 			</div>
 
             <div class="box">
-				<img src="/images/Kak aris.jpg">
+				<img src="/images/aris.jpg">
 				<h3>Aries Sukma Haq</h3>
 				<h5>Back End Engineer</h5>
 				<div class="icons">
-					<a href="#"><i class="fab fa-linkedin-in"></i></i></a>
-					<a href="#"><i class="fab fa-instagram"></i></i></a>
+					<a href="https://www.linkedin.com/in/aries-sukma-haq-unnes?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></i></a>
+					<a href="https://instagram.com/ariez_chrome?igshid=NGVhN2U2NjQ0Yg"><i class="fab fa-instagram"></i></i></a>
 				</div>
 			</div>
 
@@ -98,8 +98,8 @@
 				<h3>Ney Efnan Prazeti</h3>
 				<h5>Back End Engineer</h5>
 				<div class="icons">
-					<a href="#"><i class="fab fa-linkedin-in"></i></i></a>
-					<a href="#"><i class="fab fa-instagram"></i></i></a>
+					<a href="https://www.linkedin.com/in/ney-efnan-prazeti-129517270?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></i></a>
+					<a href="https://instagram.com/efnnprzt?igshid=MTNiYzNiMzkwZA"><i class="fab fa-instagram"></i></i></a>
 				</div>
 			</div>
         </div>
