--- a/html/facilities.html
+++ b/html/facilities.html
@@ -36,7 +36,7 @@
 <!-- Start Facilities -->
    <section class="team">
       <div class="center">
-         <h1>Facilities</h1>
+         <h1>Facilitiesy</h1>
          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
             Exercitationem, ex.</p>
       </div>
