--- a/html/ourteam.html
+++ b/html/ourteam.html
@@ -114,21 +114,22 @@
             <div class="footer-col">
                 <h4>Luxury Hotel</h4>
                 <ul>
-                    <li><a href="#rooms">Rooms</a></li>
-                    <li><a href="#facilities">Facilities</a></li>
-                    <li><a href="#faq">Faq</a></li>
-                    <li><a href="#team">Our Team</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="rooms.html">Rooms</a></li>
+                    <li><a href="facilities.html">Facilities</a></li>
+                    <li><a href="faq.html">Faq</a></li>
+                    <li><a href="ourteam.html">Our Team</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>Tipe-tipe Rooms</h4>
                 <ul>
-                    <li><a href="#service">Deluxe Basic</a></li>
-                    <li><a href="#service">Deluxe Common</a></li>
-                    <li><a href="#service">Deluxe Rare</a></li>
-                    <li><a href="#service">Executive Spesial</a></li>
-                    <li><a href="#service">Executive Epic</a></li>
-                    <li><a href="#service">Executive Legendary</a></li>
+                    <li><a href="rooms.html#basic">Deluxe Basic</a></li>
+                    <li><a href="rooms.html#common">Deluxe Common</a></li>
+                    <li><a href="rooms.html#rare">Deluxe Rare</a></li>
+                    <li><a href="rooms.html#spesial">Executive Spesial</a></li>
+                    <li><a href="rooms.html#epic">Executive Epic</a></li>
+                    <li><a href="rooms.html#legendary">Executive Legendary</a></li>
                 </ul>
             </div>
             <div class="footer-col">
