--- a/html/rooms.html
+++ b/html/rooms.html
@@ -52,7 +52,7 @@
                 <img src="/images/Deluxe Basic.jpg" alt="room-image">
             </div>
             <div class="room-text">
-                <h3>Deluxe Basic</h3>
+                <h3 id="basic">Deluxe Basic</h3>
                 <ul>
                     <li>
                         <i class="fas fa-arrow-alt-circle-right"></i>
@@ -72,7 +72,7 @@
                 <p class="room-price">
                     <span>Rp. 500.000 /</span>Per Night
                 </p>
-                <button type="button" class="room-btn">Book Now</button>
+                <a href="form.html"><button type="button" class="room-btn">Book Now</button></a>
             </div>
         </article>
         <!-- End Per Room -->
@@ -82,7 +82,7 @@
                 <img src="/images/Deluxe Common.jpg" alt="room-image">
             </div>
             <div class="room-text">
-                <h3>Deluxe Common</h3>
+                <h3 id="common">Deluxe Common</h3>
                 <ul>
                     <li>
                         <i class="fas fa-arrow-alt-circle-right"></i>
@@ -102,7 +102,7 @@
                 <p class="room-price">
                     <span>Rp. 500.000 /</span>Per Night
                 </p>
-                <button type="button" class="room-btn">Book Now</button>
+                <a href="form.html"><button type="button" class="room-btn">Book Now</button></a>
             </div>
         </article>
         <!-- End Per Room -->
@@ -112,7 +112,7 @@
                 <img src="/images/Deluxe Rare.jpg" alt="room-image">
             </div>
             <div class="room-text">
-                <h3>Deluxe Rare</h3>
+                <h3 id="rare">Deluxe Rare</h3>
                 <ul>
                     <li>
                         <i class="fas fa-arrow-alt-circle-right"></i>
@@ -132,7 +132,7 @@
                 <p class="room-price">
                     <span>Rp. 500.000 /</span>Per Night
                 </p>
-                <button type="button" class="room-btn">Book Now</button>
+                <a href="form.html"><button type="button" class="room-btn">Book Now</button></a>
             </div>
         </article>
         <!-- End Per Room -->
@@ -149,7 +149,7 @@
                 <img src="/images/Executive Spesial.jpg" alt="room-image">
             </div>
             <div class="room-text">
-                <h3>Executive Spesial</h3>
+                <h3 id="spesial">Executive Spesial</h3>
                 <ul>
                     <li>
                         <i class="fas fa-arrow-alt-circle-right"></i>
@@ -169,7 +169,7 @@
                 <p class="room-price">
                     <span>Rp. 500.000 /</span>Per Night
                 </p>
-                <button type="button" class="room-btn">Book Now</button>
+                <a href="form.html"><button type="button" class="room-btn">Book Now</button></a>
             </div>
         </article>
         <!-- End Per Room -->
@@ -179,7 +179,7 @@
                 <img src="/images/Executive Epic.jpg" alt="room-image">
             </div>
             <div class="room-text">
-                <h3>Executive Epic</h3>
+                <h3 id="epic">Executive Epic</h3>
                 <ul>
                     <li>
                         <i class="fas fa-arrow-alt-circle-right"></i>
@@ -199,7 +199,7 @@
                 <p class="room-price">
                     <span>Rp. 500.000 /</span>Per Night
                 </p>
-                <button type="button" class="room-btn">Book Now</button>
+                <a href="form.html"><button type="button" class="room-btn">Book Now</button></a>
             </div>
         </article>
         <!-- End Per Room -->
@@ -209,7 +209,7 @@
                 <img src="/images/Executive Legendary.jpg" alt="room-image">
             </div>
             <div class="room-text">
-                <h3>Executive Legendary</h3>
+                <h3 id="legendary">Executive Legendary</h3>
                 <ul>
                     <li>
                         <i class="fas fa-arrow-alt-circle-right"></i>
@@ -229,7 +229,7 @@
                 <p class="room-price">
                     <span>Rp. 500.000 /</span>Per Night
                 </p>
-                <button type="button" class="room-btn">Book Now</button>
+                <a href="form.html"><button type="button" class="room-btn">Book Now</button></a>
             </div>
         </article>
         <!-- End Per Room -->
@@ -245,21 +245,22 @@
             <div class="footer-col">
                 <h4>Luxury Hotel</h4>
                 <ul>
-                    <li><a href="#rooms">Rooms</a></li>
-                    <li><a href="#facilities">Facilities</a></li>
-                    <li><a href="#faq">Faq</a></li>
-                    <li><a href="#team">Our Team</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="rooms.html">Rooms</a></li>
+                    <li><a href="facilities.html">Facilities</a></li>
+                    <li><a href="faq.html">Faq</a></li>
+                    <li><a href="ourteam.html">Our Team</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>Tipe-tipe Rooms</h4>
                 <ul>
-                    <li><a href="#service">Deluxe Basic</a></li>
-                    <li><a href="#service">Deluxe Common</a></li>
-                    <li><a href="#service">Deluxe Rare</a></li>
-                    <li><a href="#service">Executive Spesial</a></li>
-                    <li><a href="#service">Executive Epic</a></li>
-                    <li><a href="#service">Executive Legendary</a></li>
+                    <li><a href="#basic">Deluxe Basic</a></li>
+                    <li><a href="#common">Deluxe Common</a></li>
+                    <li><a href="#rare">Deluxe Rare</a></li>
+                    <li><a href="#spesial">Executive Spesial</a></li>
+                    <li><a href="#epic">Executive Epic</a></li>
+                    <li><a href="#legendary">Executive Legendary</a></li>
                 </ul>
             </div>
             <div class="footer-col">
