--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luxuryz Hotel</title>
+    <title>Luxury Hotel</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="/images/logo.png" type="luxury-hotel-logo">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -40,7 +40,7 @@
     <div class="wrapper-main">
         <div class="text-main">
             <h1>Luxury Hotel</h1>
-            <p><br>Selamat datang disuatu kenyamanan</p>
+            <p><br>Relax & Recharge with our luxury rooms</p>
             <a href="#about" class="buttons">View More</a>
         </div>
         <img src="/images/Luxury Hotel.jpg" style="width: 100%; height: 100%;">
@@ -49,7 +49,8 @@
     <div class="wrapper-main">
         <div class="text-main">
             <h1>Luxury Hotel</h1>
-            <p><br>Beberapa rekomendasi untuk kalian</p>
+            <p><br>Here are some room recommendations <br>
+                from luxury hotels</p>
             <a href="#recomen" class="buttons">View More</a>
         </div>
         <img src="/images/Executive Legendary.jpg" style="width: 100%; height: 100%;">
@@ -58,10 +59,11 @@
     <div class="wrapper-main">
         <div class="text-main">
             <h1>Luxury Hotel</h1>
-            <p><br>Selamat datang disuatu kenyamanan</p>
-            <a href="#" class="buttons">View More</a>
+            <p><br>Here are some famous individuals who have <br>
+                reviewed this luxury hotel.</p>
+            <a href="#review" class="buttons">View More</a>
         </div>
-        <img src="/images/hotel3.jpg" style="width: 100%; height: 100%;">
+        <img src="/images/reviewer.jpg" style="width: 100%; height: 100%;">
     </div>
     
     <!-- Button Prev and Next -->
@@ -147,21 +149,21 @@
 
 
 <!-- Start Review -->
-<section class="review-main">
-    <div class="head-recomen">
+<section class="review-main" id="review">
+    <div class="head-review">
         <!-- <span>Explore</span> -->
-        <h2>Recomendation Rooms</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, <br>
-            adipisicing elit. Dolor quos illo</p>
+        <h2>Reviews from some famous people</h2>
+        <p>Here are some famous individuals who have <br>
+            reviewed this luxury hotel.</p>
     </div>
     <div class="wrapper">
         <div class="box">
           <i class="fas fa-quote-left quote"></i>
-          <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
+          <p>The culinary experience at Luxury Hotel is nothing short of exceptional. The range of cuisines offered at the hotel's restaurant is a perfect blend of local flavors and international delights. Each dish is meticulously prepared using high-quality, fresh ingredients. The extensive menu caters to diverse palates, featuring authentic local delicacies alongside delectable international fare. The quality of taste and presentation of the food here is truly awe-inspiring.</p>
           <div class="content">
             <div class="info">
-              <div class="name">Alex Smith</div>
-              <div class="job">Designer | Developer</div>
+              <div class="name">Tanboy Kun</div>
+              <div class="job">Youtuber | Entrepreneur</div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -177,11 +179,11 @@
         </div>
         <div class="box">
           <i class="fas fa-quote-left quote"></i>
-          <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
+          <p>The rooms at Luxury Hotel strike a perfect balance between comfort and luxury. Their elegant design with modern touches creates a warm and welcoming ambiance. Room cleanliness is impeccably maintained, and the serene atmosphere fosters an ideal environment for relaxation after a day's activities. In-room amenities such as plush bedding and luxurious bath essentials are thoughtfully curated to meet guests' needs at the highest standards.</p>
           <div class="content">
             <div class="info">
-              <div class="name">Steven Chris</div>
-              <div class="job">YouTuber | Blogger</div>
+              <div class="name">Windah Basudara</div>
+              <div class="job">YouTuber | Streamer</div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -197,11 +199,11 @@
         </div>
         <div class="box">
           <i class="fas fa-quote-left  quote"></i>
-          <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
+          <p>Luxury Hotel offers comprehensive facilities designed to pamper its guests. From a beautiful swimming pool to a state-of-the-art fitness center and a spa offering various relaxation treatments, the amenities here are top-notch. Additionally, their concierge service is incredibly helpful in providing information about local attractions and activities around the hotel area. With complete meeting spaces and business services, this hotel caters perfectly to both business and leisure travelers.</p>
           <div class="content">
             <div class="info">
-              <div class="name">Kristina Bellis</div>
-              <div class="job">Freelancer | Advertiser</div>
+              <div class="name">Miawaug</div>
+              <div class="job">YouTuber | Gamers</div>
               <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -228,21 +230,22 @@
             <div class="footer-col">
                 <h4>Luxury Hotel</h4>
                 <ul>
-                    <li><a href="#rooms">Rooms</a></li>
-                    <li><a href="#facilities">Facilities</a></li>
-                    <li><a href="#faq">Faq</a></li>
-                    <li><a href="#team">Our Team</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="./html/rooms.html">Rooms</a></li>
+                    <li><a href="./html/facilities.html">Facilities</a></li>
+                    <li><a href="./html/faq.html">Faq</a></li>
+                    <li><a href="./html/ourteam.html">Our Team</a></li>
                 </ul>
             </div>
             <div class="footer-col">
                 <h4>Tipe-tipe Rooms</h4>
                 <ul>
-                    <li><a href="#service">Deluxe Basic</a></li>
-                    <li><a href="#service">Deluxe Common</a></li>
-                    <li><a href="#service">Deluxe Rare</a></li>
-                    <li><a href="#service">Executive Spesial</a></li>
-                    <li><a href="#service">Executive Epic</a></li>
-                    <li><a href="#service">Executive Legendary</a></li>
+                    <li><a href="./html/rooms.html#basic">Deluxe Basic</a></li>
+                    <li><a href="./html/rooms.html#common">Deluxe Common</a></li>
+                    <li><a href="./html/rooms.html#rare">Deluxe Rare</a></li>
+                    <li><a href="./html/rooms.html#spesial">Executive Spesial</a></li>
+                    <li><a href="./html/rooms.html#epic">Executive Epic</a></li>
+                    <li><a href="./html/rooms.html#legendary">Executive Legendary</a></li>
                 </ul>
             </div>
             <div class="footer-col">
